Header fixes. Hover tooltip on Mod/Admin (non-bootstrap). Mobile fixes
No scrollbar on main nav (unhides logout button).
Comment out unimplemented messages area.
Add icons to nav when in mobile (xs) (doesn't play nice on lg).
Use fa-file-excel-o to represent libs (an X instead of </>).

--- a/public/css/common.css
+++ b/public/css/common.css
@@ -278,3 +278,7 @@ th > a {
 a.panel-heading {
   display: block;
 }
+
+.navbar-static-top .navbar-collapse {
+  max-height: initial;
+}
